# pulp-tool

./: .agentready-config.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json  requirements.in  requirements.txt  setup.py
.cursor/rules/: konflux-ecosystem.mdc  llm-development-guidelines-deep.mdc  llm-development-guidelines.mdc
.github/: PULL_REQUEST_TEMPLATE.md  commit-message-template.txt
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  config.yml
.github/workflows/: docs.yml  gh-action-testsuite.yaml  python-diff-lint.yml  release.yml  security-scan.yml
.tekton/: pulp-e2e-testing-pull-request.yaml  pulp-e2e-testing-push.yaml  pulp-tool-container-build-pull-request.yaml  pulp-tool-container-build-push.yaml
.tekton/pipelines/: pulp-e2e-testing.yaml
.tekton/tasks/: post-test-cleanup.yaml  run-e2e-test-suite.yaml
docs/: ARCHITECTURE.md  cli-reference.md  pulp-cli-gap-analysis.md
docs/adr/: 0000-record-architecture-decisions.md  0001-use-python-3-12.md  0002-use-httpx-for-http.md
e2e/: README.md  post-test-cleanup.py  post-test-validation.py  test-pulp-tool.py
pulp_tool/: __init__.py  exceptions.py
pulp_tool/api/: base.py  distribution_client.py  pulp_client.py  pulp_client_cache.py  pulp_client_chunked_get.py  pulp_client_repository.py
pulp_tool/cli/: __init__.py  create_repository.py  pull.py  search_by.py  search_by_checksum.py  upload.py  upload_files.py
pulp_tool/models/: __init__.py  artifacts.py  cli.py  context.py  pulp_api.py  repository.py  results.py  statistics.py
pulp_tool/pull/: __init__.py  download.py  reporting.py  upload.py
pulp_tool/services/: __init__.py  pull_service.py  upload_collect.py  upload_common.py  upload_service.py
pulp_tool/transfer/: upload.py
pulp_tool/utils/: __init__.py  artifact_detection.py  config_manager.py  config_utils.py  constants.py  correlation.py  distribution_manager.py  error_handling.py  file_operations.py  iteration_utils.py  logger.py  logging_utils.py  path_utils.py  pulp_capabilities.py  pulp_helper.py  pulp_tasks.py  repository_manager.py  response_utils.py  rpm_operations.py  rpm_overwrite.py  rpm_pulp_search.py  session.py  upload_orchestrator.py  uploads.py
scripts/: README.md  check-all.sh
skills/: README.md  verification-scenarios.md
skills/drafting-pulp-tool-pr/: SKILL.md  templates.md
tests/: README.md  conftest.py  test_basic.py  test_cli.py  test_error_handling.py  test_protocols.py  test_pull.py  test_search_by.py  test_search_by_checksum.py  test_services.py  test_temp_file_cleanup.py  test_transfer.py  test_upload.py
tests/api/: test_artifact_mixin.py  test_auth.py  test_base_mixin.py  test_distribution_client.py  test_file_content_mixin.py  test_pulp_client.py  test_pulp_client_additional.py  test_pulp_client_async.py  test_pulp_client_cache.py  test_pulp_client_chunked_content.py  test_pulp_client_core.py  test_pulp_client_gather_build.py  test_pulp_client_tasks_rpm.py  test_repository_distribution_mixin.py  test_repository_distribution_mixin_rpm_dist.py  test_repository_distribution_mixin_rpm_repo.py  test_rpm_content_mixin.py  test_task_mixin.py
tests/cli/: test_cli_core.py  test_cli_create_repository.py  test_cli_get_urls.py  test_cli_pull.py  test_cli_pull_filters_and_transfer.py  test_cli_pull_transfer_errors.py  test_cli_upload.py  test_cli_upload_errors_and_results_json.py  test_cli_upload_files.py  test_cli_upload_files_artifacts.py  test_cli_upload_files_basics.py  test_cli_upload_optional_and_no_results.py  test_cli_upload_paths_and_success.py  test_entrypoints.py  test_main_exits.py  test_search_by_errors_json.py  test_search_by_errors_json_basic.py  test_search_by_help_validation.py  test_search_by_helpers.py  test_search_by_results_json_early.py  test_search_by_results_json_nvr_explicit.py  test_search_by_results_json_output_cli_errors.py  test_search_by_results_json_signed_api.py  test_search_by_success.py
tests/models/: test_all_models.py  test_all_models_content_and_artifact_meta.py  test_all_models_core_and_repo.py  test_all_models_download_upload_stats.py  test_all_models_json_and_requests.py  test_validation_models.py
tests/pull/: test_pull_client_transfer.py  test_pull_distribution_and_build.py  test_pull_download_flow.py  test_pull_download_flow_download_extract.py  test_pull_download_flow_setup_load.py  test_pull_upload_logging.py  test_pull_upload_logging_reporting.py  test_pull_upload_logging_upload.py
tests/services/: test_upload_artifact_find.py  test_upload_bug_fixes.py  test_upload_collect_coverage.py  test_upload_collect_save.py  test_upload_distributions_model.py  test_upload_pipeline.py  test_upload_pipeline_process_json.py  test_upload_pipeline_sbom_scan.py  test_upload_sbom.py  test_upload_serialization_url.py
tests/support/: __init__.py  constants.py  factories.py  model_test_helpers.py  temp_config.py  tls_certs.py  upload_orchestrator_test_stub.py
tests/utils/: test_artifact_detection.py  test_config_manager.py  test_config_utils.py  test_correlation.py  test_distribution_manager.py  test_error_handling.py  test_file_operations.py  test_hypothesis_properties.py  (+29 more)
(+19 files in other folders)
