[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-tool"
dynamic = ["version"]
description = "A Python client for Pulp API operations including RPM, log, and SBOM file management"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rok Artifact Storage Team", email = "rokartifactstorage@redhat.com"}
]
maintainers = [
    {name = "Rok Artifact Storage Team", email = "rokartifactstorage@redhat.com"}
]
keywords = ["pulp", "rpm", "package-management", "konflux", "redhat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "diff-cover>=7.0",
    # Code formatting and linting
    "black>=25.1.0",
    "flake8>=7.0",
    "mypy>=1.11.0",
    "pylint>=3.3.0",
    # Pre-commit hooks
    "pre-commit>=4.0.0",
    # Build tools
    "setuptools>=69.0",
    "wheel",
    "setuptools-scm[toml]>=8.0",
    # Dependency CVE audit (local: make audit). When Pygments >2.19.2 is on PyPI, add
    # "pygments>=2.19.3" here and remove CVE-2026-4539 ignores from .github/workflows/security-scan.yml.
    "pip-audit>=2.7.0",
]

[project.scripts]
pulp-tool = "pulp_tool.cli:main"

[project.urls]
Homepage = "https://github.com/konflux/pulp-tool"
Repository = "https://github.com/konflux/pulp-tool"
Issues = "https://github.com/konflux/pulp-tool/issues"
Documentation = "https://github.com/konflux/pulp-tool#readme"

[tool.setuptools]
packages = ["pulp_tool", "pulp_tool.api", "pulp_tool.models", "pulp_tool.utils"]

[tool.setuptools.package-data]
pulp_tool = ["*.toml", "*.cfg"]

[tool.setuptools_scm]
write_to = "pulp_tool/_version.py"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = ["import-error", "cyclic-import"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 20
max-statements = 50
max-parents = 7
max-attributes = 7
min-public-methods = 1
max-public-methods = 20

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pulp_tool.api.pulp_client"
disable_error_code = ["override", "misc"]

[[tool.mypy.overrides]]
module = "pulp_tool.utils.validation"
disable_error_code = ["unreachable"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.task_manager"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.base"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.repositories.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.distributions.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.content.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.artifacts.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.tasks.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "pulp_tool.services.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "pulp_tool.utils.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.pull.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.cli.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined", "method-assign"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=pulp_tool --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=85"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async (use pytest-asyncio)",
]

[tool.coverage.report]
fail_under = 85
